fixed z-index for dialogs

--- a/css/src/dialog.css
+++ b/css/src/dialog.css
@@ -21,7 +21,7 @@
 	margin: 0 auto;
 	padding: 5px;
 	position: fixed;
-	z-index: 975;
+	z-index: 1000;
 }
 
 .kon-dialog .kon-box h3 {
