--- a/css/src/header.css
+++ b/css/src/header.css
@@ -12,7 +12,7 @@ header {
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 1000;
+	z-index: 900;
 }
 
 header .kon-wrapper {
